--- a/app/src/main/res/layout/fragment_rule.xml
+++ b/app/src/main/res/layout/fragment_rule.xml
@@ -1,18 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.eddie.memorygame.RuleActivity">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="#595B5A"
+    tools:context="com.example.eddie.memorygame.RuleFragment">
+
+    <Button
+        android:id="@+id/escape"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:onClick="closeFragment"
+        android:background="@drawable/x" />
 
     <TextView
         android:id="@+id/rulesTitle"
         android:text="Rules"
         android:textSize="24dp"
+        android:textColor="#FFFFFF"
+        android:layout_below="@id/escape"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true" />
@@ -23,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/rulesTitle"
         android:layout_marginTop="30dp"
+        android:textColor="#FFFFFF"
         android:text="@string/rule1"
         android:textSize="18dp" />
 
@@ -32,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/rule1"
         android:layout_marginTop="30dp"
+        android:textColor="#FFFFFF"
         android:text="@string/rule2"
         android:textSize="18dp" />
 
@@ -41,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/rule2"
         android:layout_marginTop="30dp"
+        android:textColor="#FFFFFF"
         android:text="@string/rule3"
         android:textSize="18dp" />
 
